Add favicons and update index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Radio Energy</title>
     <meta name="description" content="Listen to BeaTR online radio with our elegant web player">
+
+    {/* Favicon Linkleri Başlangıç */}
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="shortcut icon" href="/favicon.ico">
+    {/* Opsiyonel: Tarayıcı tema rengi ve Safari Pinned Tab */}
+    {/* <meta name="theme-color" content="#ffffff"> */}
+    {/* <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"> */}
+    {/* Favicon Linkleri Bitiş */}
+
   </head>
   <body>
     <div id="root"></div>
